@@ -1251,54 +1251,59 @@ class Configuration(SomaXML):
     ## Update an existing hdf5-file with the read parameter if possible.
     ## @param filename File name of the hdf5 file. It has to exist.
     ## @return None
-    def update_hdf5(self,filename):
+    def update_hdf5(self,filename,force_polyarch=False):
         if not self.good:
             print("ERROR: not fully initialized Configurations cannot be written to hdf5.")
 
-        f = h5py.File(filename,"r")
+        with  h5py.File(filename,"r") as f:
 
-        ensure_list = []
-        ensure_list += [("/parameter/n_polymers",self.n_polymers)]
-        ensure_list += [("/parameter/n_poly_type",self.n_poly_type)]
-        for e in ensure_list:
-            data = f[e[0]][0:]
-            assert ((data == e[1]).all()),"Error "+e[0]+" property is not identical, but has to be constant."
+            ensure_list = []
+            ensure_list += [("/parameter/n_polymers",self.n_polymers)]
+            ensure_list += [("/parameter/n_poly_type",self.n_poly_type)]
+            for e in ensure_list:
+                data = f[e[0]][0:]
+                assert ((data == e[1]).all()),"Error "+e[0]+" property is not identical, but has to be constant."
 
-        #check polymer N of old and new
-        poly = 0
-        old_polytype = f['/poly_type'][:]
-        old_polyarch = f['/parameter/poly_arch'][:]
-        old_polytypeoffset = f['/parameter/poly_type_offset'][:]
-        while poly < self.n_polymers[0]:
-            old_type = old_polytype[poly]
-            old_N = old_polyarch[ old_polytypeoffset[old_type] ]
-            new_type = 0
-            N_covered = 0
-            for ms in self.molecule_set_list:
-                if poly < ms.N:
-                    break
-                new_type += 1
-                N_covered += ms.N
-                break
-            new_N = self.poly_arch.poly_arch[ self.poly_arch.poly_type_offset[new_type]]
-            assert (old_N == new_N), "Error you changed N of a polymer. This is impossible. "+str((old_N,new_N,poly))
-            poly += 1
+            if force_polyarch:
+                #check polymer N of old and new
+                poly = 0
+                old_polytype = f['/poly_type'][:]
+                old_polyarch = f['/parameter/poly_arch'][:]
+                old_polytypeoffset = f['/parameter/poly_type_offset'][:]
+                while poly < self.n_polymers[0]:
+                    old_type = old_polytype[poly]
+                    old_N = old_polyarch[ old_polytypeoffset[old_type] ]
+                    new_type = 0
+                    N_covered = 0
+                    for ms in self.molecule_set_list:
+                        if poly < ms.N:
+                            break
+                        new_type += 1
+                        N_covered += ms.N
+                        break
+                    new_N = self.poly_arch.poly_arch[ self.poly_arch.poly_type_offset[new_type]]
+                    assert (old_N == new_N), "Error you changed N of a polymer. This is impossible. "+str((old_N,new_N,poly))
+                    poly += 1
 
-        #check poly_arch
-        data =f['/parameter/poly_arch'][0:]
-        pa = self.poly_arch.poly_arch[0:]
-        if not len(data) == len(pa) or not (data == pa).all():
-            print("Check poly_arch for consistency.")
-            for p_id in range(self.n_poly_type[0]):
-                h5_N = f['/parameter/poly_arch'][ f['/parameter/poly_type_offset'][p_id] ]
-                xml_N = self.poly_arch.poly_arch[ self.poly_arch.poly_type_offset[p_id]]
-                assert (h5_N == xml_N),"Polymer type "+str(p_id)+" has N= "+str(h5_N)+" in existing file, but "+str(xml_N)+" in the new xml-file. This is incompatible."
+                #check poly_arch
+                data =f['/parameter/poly_arch'][0:]
+                pa = self.poly_arch.poly_arch[0:]
+                if not len(data) == len(pa) or not (data == pa).all():
+                    print("Check poly_arch for consistency.")
+                    for p_id in range(self.n_poly_type[0]):
+                        h5_N = f['/parameter/poly_arch'][ f['/parameter/poly_type_offset'][p_id] ]
+                        xml_N = self.poly_arch.poly_arch[ self.poly_arch.poly_type_offset[p_id]]
+                        assert (h5_N == xml_N),"Polymer type "+str(p_id)+" has N= "+str(h5_N)+" in existing file, but "+str(xml_N)+" in the new xml-file. This is incompatible."
+            else: #use old polyarch from file if not forced
+                self.n_types = f["/parameter/n_types"][:]
+                self.poly_arch.poly_type_offset = f["/parameter/poly_type_offset"][:]
+                self.poly_arch_length = f["/parameter/poly_arch_length"][:]
+                self.poly_arch.poly_arch = f["/parameter/poly_arch"][:]
+                self.poly_type = f["/poly_type"][:]
 
-        self.time[0] = f["/parameter/time"][0]
-        print("The time attribute will not be updated.")
+            self.time[0] = f["/parameter/time"][0]
+            print("The time attribute will not be updated.")
 
-
-        f.close()
         print("Updating configuration is possible. So we overwrite the new properties.")
         self.write_hdf5(filename,"r+")
 
@@ -1658,7 +1663,8 @@ def main(argv):
     parser.add_argument('-o',metavar='output_file',type=str,nargs=1,help="Name of the output file. Will be  overwritten.")
     parser.add_argument('--no-hdf5-output',action="store_true",help="Do not generate an ouput hdf5 file, but parse the input and print out user info (if not suppressed).",default=False)
     parser.add_argument('--no-user-output',action="store_true",help="Suppress user ouput.",default=False)
-    parser.add_argument('--update',action="store_true",help="Update an existing hdf5 configuration file instead of creating a new one. You are responsible, that the update is applicaple to the existing configuration.")
+    parser.add_argument('--update',action="store_true",help="Update an existing hdf5 configuration file instead of creating a new one. You are responsible, that the update is applicaple to the existing configuration. By default the polyarch configuration is not updated: use '--force-polyarch-update' a change in polyarch is desired.")
+    parser.add_argument('--force-polyarch-update',action="store_true",help="Force an update of the polyarch, when using the '--update' flag. Updating the polyarch can be dangerous if the order of polymers is changed during the run. (For example with loadbalancing or domain decoposition.")
     parser.add_argument('--dot-graph',action="store_true",help="Print string representation of the Molecules for the \"dot\" tool of the Graphviz package.")
     parser.add_argument('--ana-filename',metavar='ana filename',type=str,nargs=1,required=False,help="Output filename of the analysis hdf5 file.")
     parser.add_argument('--no-ana-output',action="store_true",help="Do not write an hdf5 analysis file.",default=False)
@@ -1705,7 +1711,7 @@ def main(argv):
         conf.write_hdf5(outfile)
 
     if not arguments['no_hdf5_output'] and arguments['update']:
-        conf.update_hdf5(outfile)
+        conf.update_hdf5(outfile,arguments["force_polyarch_update"])
 
     analysis = AnaGen.AnalysisFile(outfile,filename)
     if not arguments['no_ana_output']:
